// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`A Code component aligned 1`] = `
.c0 {
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  font-size: 1rem;
  line-height: 1.5rem;
  font-weight: 400;
  text-transform: none;
  text-align: right;
  color: #262D33;
  font-family: 'Monaco','Menlo','Ubuntu Mono','Consolas','source-code-pro',monospace;
}

<code
  className="c0"
>
  🥨 Yum yum!
</code>
`;

exports[`A Code component resized 1`] = `
.c0 {
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  font-size: 3.25rem;
  line-height: 3.75rem;
  font-weight: 400;
  text-transform: none;
  text-align: left;
  color: #262D33;
  font-family: 'Monaco','Menlo','Ubuntu Mono','Consolas','source-code-pro',monospace;
}

<code
  className="c0"
  size="d2"
>
  🥨
</code>
`;

exports[`A Code component transformed 1`] = `
.c0 {
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  font-size: 1rem;
  line-height: 1.5rem;
  font-weight: 400;
  text-transform: uppercase;
  text-align: left;
  color: #262D33;
  font-family: 'Monaco','Menlo','Ubuntu Mono','Consolas','source-code-pro',monospace;
}

<code
  className="c0"
>
  🥨 Yum yum!
</code>
`;

exports[`A Code component tuncated 1`] = `
.c0 {
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  font-size: 1rem;
  line-height: 1.5rem;
  font-weight: 400;
  text-transform: none;
  text-align: left;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  color: #262D33;
  font-family: 'Monaco','Menlo','Ubuntu Mono','Consolas','source-code-pro',monospace;
}

<code
  className="c0"
>
  🥨
</code>
`;

exports[`A Code component weight 1`] = `
.c0 {
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  font-size: 1rem;
  line-height: 1.5rem;
  font-weight: 700;
  text-transform: none;
  text-align: left;
  color: #262D33;
  font-family: 'Monaco','Menlo','Ubuntu Mono','Consolas','source-code-pro',monospace;
}

<code
  className="c0"
>
  🥨
</code>
`;

exports[`A Code component with variant 1`] = `
.c0 {
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  font-size: 1rem;
  line-height: 1.5rem;
  font-weight: 400;
  text-transform: none;
  text-align: left;
  color: #CC1F36;
  font-family: 'Monaco','Menlo','Ubuntu Mono','Consolas','source-code-pro',monospace;
}

<code
  className="c0"
>
  🥨
</code>
`;

exports[`A default Code component 1`] = `
.c0 {
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  font-size: 1rem;
  line-height: 1.5rem;
  font-weight: 400;
  text-transform: none;
  text-align: left;
  color: #262D33;
  font-family: 'Monaco','Menlo','Ubuntu Mono','Consolas','source-code-pro',monospace;
}

<code
  className="c0"
>
  🥨
</code>
`;
